# sdl-keybridge

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/: inspect.rs  showcase.rs
src/: keycode.rs  keymod.rs  layout.rs  lib.rs  localizer.rs  named_key.rs  resolve.rs  scancode.rs
src/locales/: ar.rs  bn.rs  cs.rs  de.rs  en.rs  es.rs  fi.rs  fr.rs  hi.rs  id.rs  it.rs  ja.rs  ko.rs  mod.rs  nl.rs  pl.rs  pt.rs  ru.rs  sk.rs  sv.rs  sw.rs  th.rs  tr.rs  ur.rs  vi.rs  zh-hans.rs  zh-hant.rs
tests/: api.rs  caps_num.rs  layouts.rs  locales.rs  platform.rs
